Bug 1006279 - Finalize thread pool when MediaBufferDecoder is destroyed. r=padenot, a=sledru