content/media/webaudio/MediaBufferDecoder.h
@@ -77,6 +77,7 @@ public:
   void AsyncDecodeMedia(const char* aContentType, uint8_t* aBuffer,
                         uint32_t aLength, WebAudioDecodeJob& aDecodeJob);
 
+  ~MediaBufferDecoder() { Shutdown(); }
   void Shutdown();
 
   size_t SizeOfExcludingThis(mozilla::MallocSizeOf aMallocSizeOf) const
